--- a/index.html
+++ b/index.html
@@ -1,36 +1,82 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <title>Nathan Gomez</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Nathan's Personal Site</title>
+</head>
 
-  <body>
-
-    <div class="title">
-      <h1> Nathan Gomez - Programmer </h1>
-    </div>
-    <div class="info">
-      <h2><u>About me : </u></h2>
-        <p> I am currently a third-year at the University
-          <br/>of Washington majoring in Computer Science<br/>
-        </p>
+<body>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="images/pfp.jpg" alt="Profile Picture" /></td>
+      <td>
+        <h1>Nathan Gomez</h1>
         <p>
-          <img class="logo" src="images/UW_logo.png"/ alt="UW Logo">
+          <em>Student at the <strong><a href="https://www.washington.edu/">University of Washington - Seattle</a></strong>.</em>
         </p>
-      <br/>
-    </div>
-    <div class="experience">
-      <h2><u>Experience: </u></h2>
-      <p class="classes"> Classes: </p>
-        <p class="brag">
-          I have taken Computer Programming 1 & 2, along
-          with Software Design at the University of Washington
-        </p>
-    </div>
-  </body>
+        <p>I am a programmer with a goal of being a back-end Software Developer, and wannabe musician!</p>
+      </td>
+    </tr>
+  </table>
+  <hr />
+  <h3>Education:</h3>
+  <ul>
+    <li>Sunnyside High School</li>
+    <li>University of Washington(Current)</li>
+  </ul>
+  <h3>Languages: </h3>
+    <ul>
+      <li> Java (Fluent) </li>
+      <li> HTML (Fluent) </li>
+      <li> CSS (Beginner) </li>
+      <li> JavaScript (Beginner) </li>
+      <li> TypeScript (Beginner) </li>
+    </ul>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>Language</th>
+        <th>Level</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Java</td>
+        <td>Advanced</td>
+        <td>Java was the first language I learned, so I feel very comfortable using it</td>
+      </tr>
+      <tr>
+        <td>JavaScript/TypeScript</td>
+        <td>Beginner</td>
+        <td>Recently started learning, along with React </td>
+      </tr>
+      <tr>
+        <td>CSS</td>
+        <td>Beginner </td>
+        <td>Recently started learning through <a href="https://udemy.com"> Here </a> </td>
+      </tr>
+      <tr>
+        <td>HTML</td>
+        <td>Intermediate</td>
+        <td>Recently started learning through <a href="https://udemy.com"> here</a></td>
+      </tr>
+    </tbody>
+  </table>
+  <footer>
+    <table>
+      <thead> <h3> Contact Me: </h3></thead>
+      <tbody>
+        <tr>
+          <td><a href="mailto:gomezng8@uw.edu">Email</a></td>
+          <td><a href="https://github.com/N8than0">Github</a></td>
+        </tr>
+      </tbody>
+    </table>
+  </footer>
+</body>
+
+</html>
 
 </html>
