--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>
           <em>Student at the <strong><a href="https://www.washington.edu/">University of Washington - Seattle</a></strong>.</em>
         </p>
-        <p>I am a programmer with a goal of being a back-end Software Developer, and wannabe musician!</p>
+        <p>I am an incoming Junior majoring in Computer Science. My goal is to be a back-end Software Developer!</p>
       </td>
     </tr>
   </table>
@@ -25,14 +25,7 @@
     <li>Sunnyside High School</li>
     <li>University of Washington(Current)</li>
   </ul>
-  <h3>Languages: </h3>
-    <ul>
-      <li> Java (Fluent) </li>
-      <li> HTML (Fluent) </li>
-      <li> CSS (Beginner) </li>
-      <li> JavaScript (Beginner) </li>
-      <li> TypeScript (Beginner) </li>
-    </ul>
+  <h3> Skills / Languages </h3>
   <table border="1">
     <thead>
       <tr>
@@ -45,7 +38,7 @@
       <tr>
         <td>Java</td>
         <td>Advanced</td>
-        <td>Java was the first language I learned, so I feel very comfortable using it</td>
+        <td>Java was the first language I learned, 2+ years of experience</td>
       </tr>
       <tr>
         <td>JavaScript/TypeScript</td>
@@ -55,22 +48,26 @@
       <tr>
         <td>CSS</td>
         <td>Beginner </td>
-        <td>Recently started learning through <a href="https://udemy.com"> Here </a> </td>
+        <td>Recently started learning<a href="https://udemy.com"> Here </a> </td>
       </tr>
       <tr>
         <td>HTML</td>
         <td>Intermediate</td>
-        <td>Recently started learning through <a href="https://udemy.com"> here</a></td>
+        <td>Recently started learning<a href="https://udemy.com"> Here</a></td>
       </tr>
     </tbody>
   </table>
   <footer>
     <table>
-      <thead> <h3> Contact Me: </h3></thead>
+      <thead> <h3> Links: </h3></thead>
       <tbody>
         <tr>
-          <td><a href="mailto:gomezng8@uw.edu">Email</a></td>
-          <td><a href="https://github.com/N8than0">Github</a></td>
+          <td>
+            <p><a href="mailto:gomezng8@uw.edu">Email me</a></p>
+          </td>
+          <td>
+            <p><a href="https://github.com/N8than0">Github</a></p>
+          </td>
         </tr>
       </tbody>
     </table>
