--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>Nathan's CSS Site</title>
   </head>
   <body>
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Nathan.</h1>
-      <h3>A <span class="pro">pro</span>grammer</h3>
+      <h3>A Computer Science Student</h3>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain-img">
     </div>
@@ -30,20 +30,56 @@
         <h2>Skills/Languages</h2>
       <div class="skills">
         <h3>Java</h3>
-        <img class="icon" src="images/java.png" alt="java">
-        <p class="inline">The first language that I learned was Java. I have 2+ years of experience and have
-        built numerous projects with this language.</p>
+
+        <p class="inline">
+          <img class="icon" src="images/java.png" alt="java">
+          <span>The first language that I learned was Java. I have 2+ years of experience and have
+        built numerous projects with this language. I really enjoy object oriented programming as a whole,
+        and I hope to continue to grow my knowledge in OOP.
+          </span>
+        </p>
         </div>
         <hr />
       <div class="skills">
-        <img class="icon" src="images/JS_TS.jpg" alt="JSTS">
+        <h3>Javasript/Typescript</h3>
+        <p>
+          <img class="icon" src="images/JS_TS.jpg" alt="JSTS">
+          <span>I am currently learning scripting languages like Javascript and Typescript,
+          with my knowledge mostly coming from a project that was done using React in a recently taken
+          Software Design class at the University of Washington.
+          </span>
+        </p>
       </div>
-
+      <hr />
+      <div class="skills">
+        <h3>HTML/CSS</h3>
+        <p>
+          <img class="icon" src="images/CSS-HTML.jpg" alt="HTCS">
+          <span>I am currently learning web development languages like HTML and CSS
+          with most of my knowledge coming from a current summer course that I am taking.
+          This website is a way to show off what I have learned.
+          </span>
+        </p>
+      </div>
+      <hr />
+      <div class="skills">
+        <h2>About Me:</h2>
+          <p> I am a First-Generation Latino student who grew up in a small town
+            in Washington. My favorite part of being in school so far has been experiencing things
+            that I can share with my family. Growing up in a lower-income household, my parents had to
+            work a lot of hours, and that meant that they had to give up some of their youth in order to
+            make sure that we were okay, so I hope to one day repay them and travel with them throughout the
+            world!
+          </p>
+      </div>
     </div>
     <div class="bottom-container">
       <div class="row">
         <h2>Get In Touch</h2>
-        <a class="btn" href="https://github.com/N8than0">Github</a>
+        <a class="btn" href="mailto:gomezng8@uw.edu">Contact Me</a>
+        <p>
+
+        </p>
       </div>
 
     </div>
