--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="images/pfp.png" alt="pfp">
         <h2>Hi.</h2>
         <p>
-          I am a Third-Year Computer Science student at the <a href="https://washinton.edu">University of Washington - Seattle.</a>
+          I am a Third-Year Computer Science student at the <a href="https://washington.edu">University of Washington - Seattle.</a>
           I enjoy coding and weightlifting on my spare time!
         </p>
         <hr/>
