--- a/index.html
+++ b/index.html
@@ -1,87 +1,93 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Roboto+Mono&display=swap" rel="stylesheet">
-    <title>Nathan's CSS Site</title>
-  </head>
-  <body>
-    <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-      <h1>I'm Nathan.</h1>
-      <h3>A Computer Science Student</h3>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
-    </div>
-    <div class="middle-container">
-      <div class="info">
-        <img src="images/pfp.png" alt="pfp">
-        <h2>Hi.</h2>
-        <p>
-          I am a Third-Year Computer Science student at the <a href="https://washington.edu">University of Washington - Seattle.</a>
-          I enjoy coding and weightlifting on my spare time!
-        </p>
-        <hr/>
-      </div>
-        <h2>Skills/Languages</h2>
-      <div class="skills">
-        <h3>Java</h3>
 
-        <p class="inline">
-          <img class="icon" src="images/java.png" alt="java">
-          <span>The first language that I learned was Java. I have 2+ years of experience and have
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Roboto+Mono&display=swap" rel="stylesheet">
+  <title>Nathan's CSS Site</title>
+</head>
+
+<body>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Nathan.</h1>
+    <h3>A Computer Science Student</h3>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
+  <div class="middle-container">
+    <div class="info">
+      <img src="images/pfp.png" alt="pfp">
+      <h2>Hi.</h2>
+      <p>
+        I am a Third-Year Computer Science student at the University of Washington - Seattle.
+        I enjoy coding and weightlifting on my spare time!
+      </p>
+      <hr>
+    </div>
+    <h2>Skills/Languages</h2>
+    <div class="skills">
+      <h3>Java</h3>
+      <img class="icon" src="images/java.png" alt="java">
+      <p class="inline">
+        The first language that I learned was Java. I have 2+ years of experience and have
         built numerous projects with this language. I really enjoy object oriented programming as a whole,
         and I hope to continue to grow my knowledge in OOP.
-          </span>
-        </p>
-        </div>
-        <hr />
-      <div class="skills">
-        <h3>Javasript/Typescript</h3>
-        <p>
-          <img class="icon" src="images/JS_TS.jpg" alt="JSTS">
-          <span>I am currently learning scripting languages like Javascript and Typescript,
-          with my knowledge mostly coming from a project that was done using React in a recently taken
-          Software Design class at the University of Washington.
-          </span>
-        </p>
-      </div>
-      <hr />
-      <div class="skills">
-        <h3>HTML/CSS</h3>
-        <p>
-          <img class="icon" src="images/CSS-HTML.jpg" alt="HTCS">
-          <span>I am currently learning web development languages like HTML and CSS
-          with most of my knowledge coming from a current summer course that I am taking.
-          This website is a way to show off what I have learned.
-          </span>
-        </p>
-      </div>
-      <hr />
-      <div class="skills">
-        <h2>About Me:</h2>
-          <p> I am a First-Generation Latino student who grew up in a small town
-            in Washington. My favorite part of being in school so far has been experiencing things
-            that I can share with my family. Growing up in a lower-income household, my parents had to
-            work a lot of hours, and that meant that they had to give up some of their youth in order to
-            make sure that we were okay, so I hope to one day repay them and travel with them throughout the
-            world!
-          </p>
-      </div>
+      </p>
     </div>
-    <div class="bottom-container">
-      <div class="row">
-        <h2>Get In Touch</h2>
-        <a class="btn" href="mailto:gomezng8@uw.edu">Contact Me</a>
-        <p>
-
-        </p>
-      </div>
-
+    <div class="skills">
+      <h3>Javasript/Typescript</h3>
+      <img class="icon" src="images/js.png" alt="JSTS">
+      <img class="icon" src="images/typescript.png" alt="JSTS">
+      <p>
+        I am currently learning scripting languages like Javascript and Typescript,
+        with my knowledge mostly coming from a project that was done using React in a recently taken
+        Software Design class at the University of Washington.
+      </p>
     </div>
-  </body>
+    <div class="skills">
+      <h3>HTML/CSS</h3>
+      <img class="icon" src="images/css.png" alt="HTCS">
+      <img class="icon" src="images/html.png" alt="HTCS">
+      <p>
+        I am currently learning web development languages like HTML and CSS
+        with most of my knowledge coming from a current summer course that I am taking.
+        This website is a way to show off what I have learned.
+      </p>
+    </div>
+    <hr />
+    <div class="bio">
+      <h2>About Me:</h2>
+      <p> I am a First-Generation Latino student who grew up in a small town
+        in Washington. My favorite part of being in school so far has been experiencing things
+        that I can share with my family. Growing up in a lower-income household, my parents had to
+        work a lot of hours, and that meant that they had to give up some of their youth in order to
+        make sure that we were okay, so I hope to one day repay them and travel with them throughout the
+        world!
+      </p>
+    </div>
+  </div>
+  <div class="bottom-container">
+    <h2>Get In Touch</h2>
+    <a class="btn" href="mailto:gomezng8@uw.edu">Contact Me</a>
+    <div class="row">
+      <a class="footer-link" href="https://github.com/n8than0">Github</a>
+      <a class="footer-link" href="https://www.cs.washington.edu/">School</a>
+      <p>
+
+      </p>
+      <a class="icons" href="https://www.flaticon.com/free-icons/javascript" title="icons">Javascript icons created by Freepik - Flaticon</a>
+      <a class="icons" href="https://www.flaticon.com/free-icons/java" title="icons">Java icons created by Freepik - Flaticon</a>
+      <a class="icons" href="https://www.flaticon.com/free-icons/typescript" title="icons">Typescript icons created by Freepik - Flaticon</a>
+      <a class="icons" href="https://www.flaticon.com/free-icons/css" title="icons">Css icons created by Alfredo Hernandez - Flaticon</a>
+      <a class="icons" href="https://www.flaticon.com/free-icons/html" title="icons">Html icons created by Alfredo Hernandez - Flaticon</a>
+      <p>© Nathan Gomez.</p>
+    </div>
+  </div>
+</body>
+
 </html>
