--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Roboto+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@600&family=Roboto+Mono&display=swap" rel="stylesheet">
   <title>Nathan's CSS Site</title>
 </head>
 
@@ -17,7 +17,7 @@
     <h1>I'm Nathan.</h1>
     <h3>A Computer Science Student</h3>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class="SN" src="images/space-needle.png" alt="SN">
   </div>
   <div class="middle-container">
     <div class="info">
@@ -44,9 +44,9 @@
       <img class="icon" src="images/js.png" alt="JSTS">
       <img class="icon" src="images/typescript.png" alt="JSTS">
       <p>
-        I am currently learning scripting languages like Javascript and Typescript,
-        with my knowledge mostly coming from a project that was done using React in a recently taken
-        Software Design class at the University of Washington.
+        I am currently learning scripting languages like Javascript and Typescript.
+        Most of my knowledge came from a project that was done using React and a Spark Java server
+        in a recently taken Software Design class at UW.
       </p>
     </div>
     <div class="skills">
@@ -66,8 +66,7 @@
         in Washington. My favorite part of being in school so far has been experiencing things
         that I can share with my family. Growing up in a lower-income household, my parents had to
         work a lot of hours, and that meant that they had to give up some of their youth in order to
-        make sure that we were okay, so I hope to one day repay them and travel with them throughout the
-        world!
+        make sure that we were okay, so I hope to one day repay them in whatever way I can!
       </p>
     </div>
   </div>
@@ -77,16 +76,9 @@
     <div class="row">
       <a class="footer-link" href="https://github.com/n8than0">Github</a>
       <a class="footer-link" href="https://www.cs.washington.edu/">School</a>
-      <p>
-
-      </p>
-      <a class="icons" href="https://www.flaticon.com/free-icons/javascript" title="icons">Javascript icons created by Freepik - Flaticon</a>
-      <a class="icons" href="https://www.flaticon.com/free-icons/java" title="icons">Java icons created by Freepik - Flaticon</a>
-      <a class="icons" href="https://www.flaticon.com/free-icons/typescript" title="icons">Typescript icons created by Freepik - Flaticon</a>
-      <a class="icons" href="https://www.flaticon.com/free-icons/css" title="icons">Css icons created by Alfredo Hernandez - Flaticon</a>
-      <a class="icons" href="https://www.flaticon.com/free-icons/html" title="icons">Html icons created by Alfredo Hernandez - Flaticon</a>
-      <p>© Nathan Gomez.</p>
+      <a class="icons" href="https://www.flaticon.com/free-icons" title="icons">Icons created by Freepik - Flaticon</a>
     </div>
+    <p>© Nathan Gomez.</p>
   </div>
 </body>
 
