--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <a class="footer-link" href="https://www.cs.washington.edu/">School</a>
       <a class="icons" href="https://www.flaticon.com/free-icons" title="icons">Icons created by Freepik - Flaticon</a>
     </div>
-    <p>© Nathan Gomez.</p>
+    <p>© 2022 Nathan Gomez.</p>
   </div>
 </body>
 
