--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <a class="footer-link" href="https://github.com/n8than0">Github</a>
       <a class="footer-link" href="https://www.linkedin.com/in/nathan8g">LinkedIn</a>
       <a class="footer-link" href="https://www.cs.washington.edu/">Allen School</a>
-      <a class="icons" href="https://www.flaticon.com/free-icons" title="icons">Icons created by Freepik - Flaticon</a>
+      <a class="icons" href="https://www.flaticon.com/" title="icons">Icons created by Freepik - Flaticon</a>
     </div>
     <p>© 2022 Nathan Gomez.</p>
   </div>
