--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h3>Java</h3>
       <img class="icon" src="images/java.png" alt="java">
       <p class="inline">
-        The first language that I learned was Java. I have 2+ years of experience and have
+        The first programming language that I learned was Java. I have 2+ years of experience and have
         built numerous projects with this language. I really enjoy object oriented programming as a whole,
         and I hope to continue to grow my knowledge in OOP.
       </p>
