--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <img class="icon" src="images/css.png" alt="HTCS">
       <img class="icon" src="images/html.png" alt="HTCS">
       <p>
-        I am currently learning web development languages like HTML and CSS
+        I am currently learning web development languages like HTML(yes yes, it's Markup I know I know :/ ) and CSS
         with most of my knowledge coming from a current summer course that I am taking.
         This website is a way to show off what I have learned.
       </p>
