--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img src="images/pfp.png" alt="pfp">
       <h2>Hi.</h2>
       <p>
-        I am a Third-Year Computer Science student at the University of Washington - Seattle.
+        I am a Fourth-Year Computer Science student at the University of Washington - Seattle.
         I enjoy coding and weightlifting on my spare time!
       </p>
       <hr>
@@ -34,7 +34,7 @@
       <h3>Java</h3>
       <img class="icon" src="images/java.png" alt="java">
       <p class="inline">
-        The first programming language that I learned was Java. I have 2+ years of experience and have
+        The first programming language that I learned was Java. I have 3+ years of experience and have
         built numerous projects with this language. I really enjoy object oriented programming as a whole,
         and I hope to continue to grow my knowledge in OOP.
       </p>
@@ -55,7 +55,7 @@
       <img class="icon" src="images/html.png" alt="HTCS">
       <p>
         I am currently learning web development languages like HTML(yes yes, it's Markup I know I know :/ ) and CSS
-        with most of my knowledge coming from a current summer course that I am taking.
+        with most of my knowledge coming from a previous online course that I took with UDEMY.
         This website is a way to show off what I have learned.
       </p>
     </div>
@@ -65,7 +65,7 @@
       <p> I am a First-Generation Latino student who grew up in a small town
         in Washington. My favorite part of being in school so far has been experiencing things
         that I can share with my family. Growing up in a lower-income household, my parents had to
-        work a lot of hours, and that meant that they had to give up some of their youth in order to
+        work a lot of hours, and that meant that they had to give up most of their youth in order to
         make sure that we were okay, so I hope to one day repay them in whatever way I can!
       </p>
     </div>
@@ -79,7 +79,7 @@
       <a class="footer-link" href="https://www.cs.washington.edu/">Allen School</a>
       <a class="icons" href="https://www.flaticon.com/" title="icons">Icons created by Freepik - Flaticon</a>
     </div>
-    <p>© 2022 Nathan Gomez.</p>
+    <p>© 2023 Nathan Gomez.</p>
   </div>
 </body>
 
