--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <a class="btn" href="mailto:gomezng8@uw.edu">Contact Me</a>
     <div class="row">
       <a class="footer-link" href="https://github.com/n8than0">Github</a>
-      <a class="footer-link" href="https://www.linkedin.com/in/nathan8g">LinkedIn</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/n8than0/">LinkedIn</a>
       <a class="footer-link" href="https://www.cs.washington.edu/">Allen School</a>
       <a class="icons" href="https://www.flaticon.com/" title="icons">Icons created by Freepik - Flaticon</a>
     </div>
