--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
     <h1>I'm Nathan.</h1>
     <h3>A Computer Science Student</h3>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img class="SN" src="images/space-needle.png" alt="SN">
   </div>
   <div class="middle-container">
     <div class="info">
       <img src="images/pfp.png" alt="pfp">
       <h2>Hi.</h2>
       <p>
-        I am a Fourth-Year Computer Science student at the University of Washington - Seattle.
-        I enjoy coding and weightlifting on my spare time!
+        I am a Fourth-Year student at the University of Washington - Seattle. I am currently Majoring in Computer Science with a Minor in Applied Mathematics. 
+        My favorite hobbies include playing musical instruments, and learning new things about programming. 
       </p>
       <hr>
     </div>
@@ -34,9 +33,9 @@
       <h3>Java</h3>
       <img class="icon" src="images/java.png" alt="java">
       <p class="inline">
-        The first programming language that I learned was Java. I have 3+ years of experience and have
-        built numerous projects with this language. I really enjoy object oriented programming as a whole,
-        and I hope to continue to grow my knowledge in OOP.
+        The first programming language that I learned was Java. I have 4+ years of experience and have
+        built numerous projects with this language through courses, and personal projects. I really enjoy object oriented programming as a whole,
+        and I hope to continue to grow my knowledge.
       </p>
     </div>
     <div class="skills">
@@ -44,9 +43,10 @@
       <img class="icon" src="images/js.png" alt="JSTS">
       <img class="icon" src="images/typescript.png" alt="JSTS">
       <p>
-        I am currently learning scripting languages like Javascript and Typescript.
+        I am familiar with using languages like Javascript and Typescript.
         Most of my knowledge came from a project that was done using React and a Spark Java server
-        in a recently taken Software Design class at UW.
+        in a recently taken Software Design class at UW. More recently, I decided to refresh my memory by building a 
+        calculator using React.
       </p>
     </div>
     <div class="skills">
@@ -54,7 +54,7 @@
       <img class="icon" src="images/css.png" alt="HTCS">
       <img class="icon" src="images/html.png" alt="HTCS">
       <p>
-        I am currently learning web development languages like HTML(yes yes, it's Markup I know I know :/ ) and CSS
+        I am currently learning web development tools/scripting languages like HTML and CSS
         with most of my knowledge coming from a previous online course that I took with UDEMY.
         This website is a way to show off what I have learned.
       </p>
