--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       <img src="images/pfp.png" alt="pfp">
       <h2>Hi.</h2>
       <p>
-        I am a Fourth-Year student at the University of Washington - Seattle. I am currently Majoring in Computer Science with a Minor in Applied Mathematics. 
-        My favorite hobbies include playing musical instruments, and learning new things about programming. 
+        I am a recent graduate of the University of Washington - Seattle who majored in Computer Science. I enjoy programming new things in my free-time and making music.  
       </p>
       <hr>
     </div>
@@ -65,14 +64,14 @@
       <p> I am a First-Generation Latino student who grew up in a small town
         in Washington. My favorite part of being in school so far has been experiencing things
         that I can share with my family. Growing up in a lower-income household, my parents had to
-        work a lot of hours, and that meant that they had to give up most of their youth in order to
-        make sure that we were okay, so I hope to one day repay them in whatever way I can!
+        work a lot of hours, and that meant that they had to give up most of their youth to
+        make sure that we were okay, so I hope to one day repay them in whatever way I can :)
       </p>
     </div>
   </div>
   <div class="bottom-container">
     <h2>Get In Touch</h2>
-    <a class="btn" href="mailto:gomezng8@uw.edu">Contact Me</a>
+    <a class="btn" href="mailto:gomez08nathan@gmail.com">Contact Me</a>
     <div class="row">
       <a class="footer-link" href="https://github.com/n8than0">Github</a>
       <a class="footer-link" href="https://www.linkedin.com/in/n8than0/">LinkedIn</a>
